syntax = "proto3";

package cart;

option go_package = "/v1";
option java_multiple_files = true;
option java_outer_classname = "CartService";
option java_package = "org.jurabek";

service CartService {
  rpc GetCustomerCart(GetCustomerCartRequest) returns (GetCustomerCartResponse);
}

message GetCustomerCartRequest {
  string customer_id = 1;
}

message GetCustomerCartResponse {
  string customer_id = 1;
  repeated CartItem items = 2;
}

message CartItem {
  int64 item_id = 1;
  float price = 2;
  int64 quantity = 3;
}
